--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,7 +5,9 @@ Django==5.0.6
 django-cors-headers==4.4.0
 django-filter==24.2
 djangorestframework==3.15.2
+gunicorn==23.0.0
 idna==3.7
+packaging==24.1
 python-dotenv==1.0.1
 requests==2.32.3
 sqlparse==0.5.0
