updated allowed host for integratiom

--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,14 @@
       "react-app/jest"
     ]
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
       "not op_mini all"
     ],
+    "proxy": "https://smile-now-1.onrender.com",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
